# lc7001-lcm

./: CMakeLists.txt  COPYRIGHT  README.md
Doc/: BuildInCodeWarrior.md  BuildInKDS.md  BuildUsingCmake.md  DebugInKDS.md  InstallKDS.md  Optional.md  SetupVirtualMachine.md
Embedded/: .cproject  .project  CMakeLists.txt  LCM1-git (clear flash).launch  LCM1-git.launch  creates19.bat
Embedded/Debugger/: creates19.bat
Embedded/Includes/: CC1110_Programmer.h  Crc.h  Eliot_Common.h  Eliot_MQTT_Task.h  Eliot_REST_Task.h  Event_Task.h  Flash.h  I2C.h  Mqtt.h  RFM100_Tasks.h  RTCS.h  SSLCertificates.h  SceneController.h  Scenes.h  Socket_Task.h  String_Sanitizer.h  Zones.h  common.h  config.h  defines.h  globals.h  includes.h  jsr.h  onq_endian.h  onq_standard_types.h  swap_demo.h  sysinfo.h  typedefs.h
Embedded/Sources/: CC1110_Programmer.c  CMakeLists.txt  Command_Lists.c  Crc.c  Eliot_Common.c  Eliot_MQTT_Task.c  Eliot_REST_Task.c  Event_Task.c  Flash.c  I2C.c  Logging_Task.c  Logging_public.h  Mqtt.c  RFM100_Tasks.c  RTCS.c  SceneController.c  Scenes.c  Shell_Task.c  Socket_Task.c  String_Sanitizer.c  Tasks.c  USB_Task.c  Zones.c  cgi_hvac.c  cgi_index.c  cgi_netstat.c  html.h  html_util.c  jsr.c  mktfs.bat  tfs_data.c
Embedded/Sources/flash/: FlashCommandSequence.c  FlashProgramOnce.c  PFlashSwap.c  SSD_FTFx.h
Embedded/Sources/jansson/: dump.c  error.c  hashtable.c  jansson.h  load.c  memory.c  pack_unpack.c  strconv.c  utf.c  value.c
Embedded/release/: LCM1-K64-2015-07-15.s19
LocalUpdateServerFiles/: README.md  config.ru  downloadFirmware.sh  installFirmware.sh  updater.rb
Server/: CMakeLists.txt
Server/Common/: CMakeLists.txt  Debug.cpp  Debug.h  MQXWrapper.cpp  MQXWrapper.h  PublishObject.h  Publisher.cpp  Publisher.h  ServerUtil.cpp  ServerUtil.h  Subscriber.h
Server/ExternalNetworkBridge/: AppSocketHandler.cpp  AppSocketHandler.h  CMakeLists.txt  ClientHandler.cpp  ClientHandler.h  ExternalNetworkBridge.cpp  ExternalNetworkBridge.h  ExternalNetworkBridgeMain.cpp  LCMSocketHandler.cpp  LCMSocketHandler.h  RegistrationSocketHandler.cpp  RegistrationSocketHandler.h
Server/LCMClient/: CMakeLists.txt  LCMClientMain.cpp
Server/LCMServer/: AvahiClient.cpp  AvahiClient.h  CMakeLists.txt  EventTaskStub.cpp  EventTaskStub.h  FlashStub.cpp  FlashStub.h  LCMServer.cpp  LCMServer.h  LCMServerMain.cpp  RFM100Stub.cpp  RFM100Stub.h
Server/Libs/: FindAvahi.cmake
Server/SQLite3/: CMakeLists.txt
Server/SSL/: CMakeLists.txt  SSLClient.cpp  SSLClient.h  SSLClientMain.cpp  SSLCommon.cpp  SSLCommon.h  SSLServer.cpp  SSLServer.h  SSLServerMain.cpp  WolfSSLTest.cpp
Server/SSL/sslCertificates/: clientCert.der  clientCert.pem  clientKey.der  clientKey.pem  serverCert.der  serverCert.pem  serverKey.der  serverKey.pem
Test/: .valgrindSuppressions  CMakeLists.txt
Test/Common/: CMakeLists.txt  TestCommon.cpp  TestCommon.h
Test/Embedded/: CMakeLists.txt
Test/Embedded/Event_Task/: CMakeLists.txt  Event_Task-test.cpp
Test/Embedded/Socket_Task/: CMakeLists.txt  Socket_Task-test.cpp
Test/Server/: CMakeLists.txt
Test/Server/ExternalNetworkBridge/: AppTestClient.cpp  AppTestClient.h  CMakeLists.txt  ClientHandler-test.cpp  ExternalNetworkBridge-test.cpp  LCMTestClient.cpp  LCMTestClient.h  RegistrationTestClient.cpp  RegistrationTestClient.h  SSLClientHandler-test.cpp  SSLExternalNetworkBridge-test.cpp  TestClient.cpp  TestClient.h
Test/Server/SQLite3/: CMakeLists.txt  SQLite3-test.cpp  db_setup.sh
Test/Server/SSL/: CMakeLists.txt  SSL-test.cpp  createCerts.sh
Version/: CMakeLists.txt  ReleaseVersion.h
Web/: schema.sql
WindowsUpdateServer/: README.md  configDevKit.rb  startUpdateServer.bat  updateFirmware.bat
WindowsUpdateServer/powerShell/: sendJSON.ps1
WolfMQTT/: .cproject  .project  CMakeLists.txt
WolfMQTT/src/: mqtt_socket.c
WolfMQTT/wolfmqtt/: mqtt_socket.h  options.h
WolfSSL/: CMakeLists.txt
WolfSSL/wolfssl-3.11.0-stable/: .gitignore  .project
WolfSSL/wolfssl-3.11.0-stable/mqx/wolfcrypt_benchmark/: wolfcrypt_benchmark_twrk70f120m_Int_Flash_DDRData_Debug_PnE_U-MultiLink.launch  wolfcrypt_benchmark_twrk70f120m_Int_Flash_DDRData_Release_PnE_U-MultiLink.launch  wolfcrypt_benchmark_twrk70f120m_Int_Flash_SramData_Debug_PnE_U-MultiLink.launch  wolfcrypt_benchmark_twrk70f120m_Int_Flash_SramData_Release_PnE_U-MultiLink.launch
WolfSSL/wolfssl-3.11.0-stable/mqx/wolfcrypt_test/: wolfcrypt_test_twrk70f120m_Int_Flash_DDRData_Debug_PnE_U-MultiLink.launch  wolfcrypt_test_twrk70f120m_Int_Flash_DDRData_Release_PnE_U-MultiLink.launch  wolfcrypt_test_twrk70f120m_Int_Flash_SramData_Debug_PnE_U-MultiLink.launch  wolfcrypt_test_twrk70f120m_Int_Flash_SramData_Release_PnE_U-MultiLink.launch
WolfSSL/wolfssl-3.11.0-stable/mqx/wolfssl/: .cproject  .project
WolfSSL/wolfssl-3.11.0-stable/mqx/wolfssl_client/: wolfssl_client_twrk70f120m_Int_Flash_DDRData_Debug_PnE_U-MultiLink.launch  wolfssl_client_twrk70f120m_Int_Flash_DDRData_Release_PnE_U-MultiLink.launch  wolfssl_client_twrk70f120m_Int_Flash_SramData_Debug_PnE_U-MultiLink.launch  wolfssl_client_twrk70f120m_Int_Flash_SramData_Release_PnE_U-MultiLink.launch
WolfSSL/wolfssl-3.11.0-stable/wolfcrypt/src/: aes.c  random.c
WolfSSL/wolfssl-3.11.0-stable/wolfssl/: ssl.h
WolfSSL/wolfssl-3.11.0-stable/wolfssl/wolfcrypt/: settings.h  tfm.h
scripts/: addALight.sh  addARandomLight.sh  addASceneController.sh  addAShade.sh  autoLog.sh  bigTest.sh  clearFlash.sh  listZones.sh  ncTimestamp.sh  reportSystemProperties.sh  reportZoneProperties.sh  setMACAddress.sh  setSamsungBearerId.sh  setSamsungIds.sh  setSystemPropertiesTest.sh  setZoneProperties.sh  systemRestart.sh  triggerRampAllCommandTest.sh  triggerRampCommandTest.sh
tools/: createRelease.sh  flash_usage.sh
tools/cmake/: armel.cmake
tools/jenkins/: build.sh  deploy.sh  firmwareDeploy.sh  incrementReleaseVersion.sh  serverDeploy.sh  sizeLimit.txt  sizeTest.sh
tools/lcm_log_parser/: check_lcm_leaks.sh  colorize.sh  lcm_colorize.csv  lcm_log_filter.sh  parse_lcm.sh  yornq.sh
tools/mqx/: MQX.patch  prepMQX.sh
tools/s19-converter/: converter.rb
